...
                                      ]),
                                    )),
                                PopupMenuItem<String>(
                                  height: h,
                                  value: "panel",
                                  child: Semantics(
                                    identifier: 'node_menu_item_panel',
                                    child: Row(children: [
                                      const Icon(Icons.lan),
                                      const SizedBox(width: 8),
                                      Text(loc.panel, style: const TextStyle(fontSize: 14)),
                                    ]),
                                  ),
                                ),
                                PopupMenuItem<String>(
                                    height: h,
                                    value: "traffic",
                                    child: Semantics(
                                      identifier: 'node_menu_item_traffic',
                                      child: Row(children: [
                                        const Icon(Icons.show_chart),
                                        const SizedBox(width: 8),
                                        Text(loc.traffic, style: const TextStyle(fontSize: 14)),
                                      ]),
                                    )),
...
