...
              children: <Widget>[
                Row(
                  children: [
                    Expanded(child: Text(loc.showAllPort)),
                    Semantics(
                      container: true,
                      identifier: 'show_all_port_switch',
                      child: Switch(
                        value: _showAllPort,
                        onChanged: (bool value) {
                          setState(() {
                            _showAllPort = value;
                            if (_timer != null) {
...
              ],
            ),
          ),
        ),
        floatingActionButton: Semantics(
          container: true,
          identifier: 'vpanel_fab',
          child: FloatingActionButton(
            onPressed: () {
              if (_timer != null) {
                _stop();
              } else {
                _start();
...
